syntax = "proto3";

package tetris;

service Tetris {
  rpc JoinGame(Player) returns (stream GameState);
  rpc SendAction(PlayerAction) returns (Empty);
  rpc GetRanking(Empty) returns (RankingResponse);
}

message Empty {}

message Player {
  string id = 1;
  string name = 2;
}

message Board {
  int32 width = 1;
  int32 height = 2;
  repeated int32 cells = 3;
}

message PlayerState {
  Player player_info = 1;
  Board board = 2;
  int32 score = 3;
  string next_piece_type = 4;
}

message GameState {
  string game_id = 1;
  enum Status {
    WAITING_FOR_OPPONENT = 0;
    PLAYING = 1;
    GAME_OVER = 2;
  }
  Status status = 2;
  repeated PlayerState player_states = 3;
  optional string winner_name = 4;
}

message PlayerAction {
  string game_id = 1;
  string player_id = 2;
  enum ActionType {
    MOVE_LEFT = 0;
    MOVE_RIGHT = 1;
    ROTATE_CW = 2;
    SOFT_DROP = 3;
    HARD_DROP = 4;
  }
  ActionType action = 3;
}

message RankingEntry {
    string player_name = 1;
    int32 total_wins = 2;
    int32 highest_score = 3;
}

message RankingResponse {
    repeated RankingEntry entries = 1;
}